--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,29 @@ Thumbs.db
 *.user
 *.userosscache
 *.sln.docstates
+
+# Test and Debug Files - NEVER COMMIT THESE
+test-*.php
+debug-*.php
+verify-*.php
+*verification*.php
+test-*.html
+auto-login.php
+check-*.php
+setup-test-data.php
+comprehensive-*.php
+docker-auto-login.php
+clear-*.php
+
+# Documentation generated during development
+*_COMPLETE.md
+*_FIX_COMPLETE.md
+DOCKER_DEPLOYMENT_COMPLETE.md
+FEATURED_DESTINATIONS_FIX_COMPLETE.md
+INTERACTIVE_MAP_FIX_COMPLETE.md
+PROFILE_PAGE_FIX_COMPLETE.md
+TRIP_STATUS_BADGES_COMPLETE.md
+
+# Cleanup scripts
+cleanup_*.ps1
+cleanup_*.sh
