Fix Mark as Visited button functionality
- Fixed missing 'type' parameter in updateTripStatus() JavaScript function
- Resolved syntax errors in destinations/show.php
- Enhanced API integration for trip status updates
- Improved user interface stability and error handling

--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -10,6 +10,9 @@ error_reporting = E_ALL
 log_errors = On
 error_log = /var/log/php_errors.log
 
+; Timezone setting
+date.timezone = Europe/Amsterdam
+
 ; OPCache settings
 [opcache]
 opcache.enable=1
