--- a/docker/php/php.ini
+++ b/docker/php/php.ini
@@ -4,8 +4,8 @@ memory_limit = 512M
 upload_max_filesize = 20M
 post_max_size = 20M
 max_execution_time = 30
-display_errors = On
-display_startup_errors = On
+display_errors = Off
+display_startup_errors = Off
 error_reporting = E_ALL
 log_errors = On
 error_log = /var/log/php_errors.log
