--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,7 +1,9 @@
 services:
   # PHP Application
   php:
-    image: ghcr.io/${{ github.repository }}:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     container_name: mapit_php_prod
     environment:
       TZ: Europe/Amsterdam
@@ -30,12 +32,11 @@ services:
     container_name: mapit_nginx_prod
     ports:
       - "80:80"
-      - "443:443"
-    volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
-      - ./ssl:/etc/nginx/ssl:ro
-      - ./logs/nginx:/var/log/nginx
+      - "443:443"    volumes:
+      - ./docker/production/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./docker/production/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./docker/production/ssl:/etc/nginx/ssl:ro
+      - ./storage/logs/nginx:/var/log/nginx
     networks:
       - mapit_network
     depends_on:
