--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -6,11 +6,10 @@ services:
       dockerfile: Dockerfile
     container_name: mapit_php_prod
     environment:
-      TZ: Europe/Amsterdam
-    volumes:
+      TZ: Europe/Amsterdam    volumes:
       - ./storage:/var/www/html/storage
-      - ./logs:/var/www/html/logs
-      - /opt/mapit/shared/.env:/var/www/html/.env:ro
+      - ./storage/logs:/var/www/html/logs
+      - ./.env:/var/www/html/.env:ro
     networks:
       - mapit_network
     depends_on:
@@ -29,10 +28,10 @@ services:
   # Nginx Web Server
   nginx:
     image: nginx:alpine
-    container_name: mapit_nginx_prod
-    ports:
+    container_name: mapit_nginx_prod    ports:
       - "80:80"
-      - "443:443"    volumes:
+      - "443:443"
+    volumes:
       - ./docker/production/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./docker/production/nginx/default.conf:/etc/nginx/conf.d/default.conf:ro
       - ./docker/production/ssl:/etc/nginx/ssl:ro
