--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,9 +40,10 @@ jobs:
           echo "❌ SSH key missing proper footer"
           echo "Last line: $(tail -1 ~/.ssh/id_rsa)"
         fi
-        
-        # Test if key is readable
-        ssh-keygen -l -f ~/.ssh/id_rsa && echo "✅ SSH key is valid" || echo "❌ SSH key validation failed"    - name: Test SSH connection
+          # Test if key is readable
+        ssh-keygen -l -f ~/.ssh/id_rsa && echo "✅ SSH key is valid" || echo "❌ SSH key validation failed"
+
+    - name: Test SSH connection
       run: |
         echo "🔐 Testing SSH connection to ${{ secrets.PRODUCTION_HOST }}..."
         ssh -vvv -o StrictHostKeyChecking=no -o ConnectTimeout=30 -o BatchMode=yes ${{ secrets.SSH_USER }}@${{ secrets.PRODUCTION_HOST }} "echo 'SSH connection successful'"
