Fix nginx SSL zone conflict and .env read-only issue
- Remove duplicate SSL session cache from nginx.conf
- Fix deprecated http2 directive in default.conf
- Remove read-only flag from .env volume mount
- This should resolve container restart loops

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -12,7 +12,7 @@ services:
     volumes:
       - ./storage:/var/www/html/storage
       - ./storage/logs:/var/www/html/logs
-      - ./.env:/var/www/html/.env:ro
+      - ./.env:/var/www/html/.env
     networks:
       - mapit_network
     depends_on:
