--- a/docker/production/nginx/default.conf
+++ b/docker/production/nginx/default.conf
@@ -74,39 +74,26 @@ server {
         limit_req zone=api burst=20 nodelay;
         try_files $uri $uri/ /index.php?$query_string;
     }
-    
-    # Health check endpoint
+      # Health check endpoint
     location /health {
         access_log off;
         return 200 "healthy\n";
         add_header Content-Type text/plain;
     }
     
-    # Main location block
+    # Main location block - proxy all requests to Apache
     location / {
-        try_files $uri $uri/ /index.php?$query_string;
-    }
-    
-    # PHP processing
-    location ~ \.php$ {
-        fastcgi_pass php:9000;
-        fastcgi_index index.php;
-        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        include fastcgi_params;
+        proxy_pass http://php:80;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Host $host;
+        proxy_set_header X-Forwarded-Server $host;
         
-        # Security
-        fastcgi_param SERVER_NAME $server_name;
-        fastcgi_param HTTPS on;
-        
-        # Timeouts
-        fastcgi_connect_timeout 60s;
-        fastcgi_send_timeout 180s;
-        fastcgi_read_timeout 180s;
-        fastcgi_buffer_size 128k;
-        fastcgi_buffers 4 256k;
-        fastcgi_busy_buffers_size 256k;
-        fastcgi_temp_file_write_size 256k;
-        fastcgi_intercept_errors on;
+        # Timeouts        proxy_connect_timeout 60s;
+        proxy_send_timeout 60s;
+        proxy_read_timeout 60s;
     }
     
     # Deny access to hidden files
