--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -31,7 +31,7 @@ services:
       - ./docker/production/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
       - ./docker/production/nginx/http-only.conf:/etc/nginx/conf.d/default.conf:ro
       - ./storage/logs/nginx:/var/log/nginx
-      - certbot_www:/var/www/certbot:ro
+      - certbot_www:/var/www/certbot
       - certbot_conf:/etc/nginx/ssl:ro
     networks:
       - mapit_network
@@ -73,6 +73,25 @@ services:
     networks:
       - mapit_network
     restart: unless-stopped
+
+  # Let's Encrypt Certbot
+  certbot:
+    image: certbot/certbot:latest
+    container_name: mapit_certbot
+    volumes:
+      - certbot_www:/var/www/certbot
+      - certbot_conf:/etc/letsencrypt
+    command: >-
+      certonly --webroot
+      --webroot-path=/var/www/certbot
+      --email admin@mapitedu.nl
+      --agree-tos
+      --no-eff-email
+      --force-renewal
+      -d mapitedu.nl
+      -d www.mapitedu.nl
+    depends_on:
+      - nginx
 
 volumes:
   mysql_data:
