Fix ACME challenge nginx location priority using ^~ modifier

--- a/docker/production/nginx/http-only.conf
+++ b/docker/production/nginx/http-only.conf
@@ -21,7 +21,7 @@ server {
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
     
     # Allow Let's Encrypt challenges FIRST (before any blocking rules)
-    location /.well-known/acme-challenge/ {
+    location ^~ /.well-known/acme-challenge/ {
         root /var/www/certbot;
         allow all;
     }
