Remove unused image files and server setup scripts; clean up SSL setup and troubleshooting scripts.

--- a/.env.example
+++ b/.env.example
@@ -32,12 +32,12 @@ UPLOAD_ALLOWED_TYPES=jpg,jpeg,png,gif,pdf,doc,docx
 
 # Email Configuration (for contact forms, notifications)
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.gmail.com
+MAIL_HOST=smtp.example.com
 MAIL_PORT=587
-MAIL_USERNAME=your-email@gmail.com
-MAIL_PASSWORD=your-email-password
+MAIL_USERNAME=your-email@example.com
+MAIL_PASSWORD=your-secure-email-password
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=noreply@mapit.com
+MAIL_FROM_ADDRESS=noreply@example.com
 MAIL_FROM_NAME="MapIt Travel"
 
 # API Keys (for mapping services)
@@ -78,9 +78,9 @@ FACEBOOK_APP_SECRET=your-facebook-app-secret
 GOOGLE_ANALYTICS_ID=your-ga-tracking-id
 
 # Admin Configuration
-ADMIN_EMAIL=admin@mapit.com
+ADMIN_EMAIL=admin@example.com
 ADMIN_USERNAME=admin
-ADMIN_PASSWORD=admin123
+ADMIN_PASSWORD=change_this_secure_password
 
 # Backup Configuration
 BACKUP_ENABLED=true
