Fix Docker deployment issues
- Create missing storage and logs directories in Dockerfiles
- Add database SQL schema files that were missing
- Add storage directory structure with .gitkeep files
- Update .gitignore to properly handle storage logs and allow database schema files
- Add missing docker/mysql/init.sql file

This resolves the Docker build error: 'cannot access /var/www/html/database: No such file or directory'

--- a/.gitignore
+++ b/.gitignore
@@ -27,11 +27,11 @@
 *.swp
 *~.nib
 
-# Logs and databases
+# Logs and databases (but allow schema files)
 *.log
-*.sql
-*.sqlite
 storage/logs/*
+!storage/logs/.gitkeep
+*.sqlite
 
 # Backup files and directories (should never be in version control)
 backups/
