Add development environment setup and Docker configurations
- Add Docker development environment (docker-compose.yml)
- Add GitHub Actions deployment workflow
- Add nginx and PHP-FPM configurations for development
- Update .gitignore for development files
- Fix 502 Gateway error with proper PHP-FPM networking

--- a/.env.example
+++ b/.env.example
@@ -30,15 +30,22 @@ SESSION_NAME=mapit_session
 UPLOAD_MAX_SIZE=5242880
 UPLOAD_ALLOWED_TYPES=jpg,jpeg,png,gif,pdf,doc,docx
 
-# Email Configuration (for contact forms, notifications)
-MAIL_DRIVER=smtp
+# Email Configuration (Amazon SES recommended)
+MAIL_DRIVER=ses
+MAIL_FROM_ADDRESS=noreply@mapitedu.nl
+MAIL_FROM_NAME="MapIt Travel"
+
+# Amazon SES Configuration
+AWS_SES_REGION=eu-west-1
+AWS_ACCESS_KEY_ID=your-aws-access-key-id
+AWS_SECRET_ACCESS_KEY=your-aws-secret-access-key
+
+# SMTP Configuration (fallback/alternative)
 MAIL_HOST=smtp.gmail.com
 MAIL_PORT=587
 MAIL_USERNAME=your-email@gmail.com
 MAIL_PASSWORD=your-email-password
 MAIL_ENCRYPTION=tls
-MAIL_FROM_ADDRESS=noreply@mapit.com
-MAIL_FROM_NAME="MapIt Travel"
 
 # API Keys (for mapping services)
 GOOGLE_MAPS_API_KEY=your-google-maps-api-key
