--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,7 +1,6 @@
 ﻿version: '3.8'
 
-services:
-  # PHP Application
+services:  # PHP Application
   php:
     build:
       context: .
@@ -28,8 +27,7 @@ services:
       - "80:80"
       - "443:443"
     volumes:
-      - ./docker/production/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./docker/production/nginx/https.conf:/etc/nginx/conf.d/default.conf:ro
+      - ./public:/var/www/html/public:ro
       - ./storage/logs/nginx:/var/log/nginx
       - certbot_www:/var/www/certbot
       - certbot_conf:/etc/nginx/ssl:ro
@@ -38,6 +36,54 @@ services:
     depends_on:
       - php
     restart: unless-stopped
+    command: >
+      sh -c "
+        echo 'server {
+            listen 80;
+            server_name mapitedu.nl www.mapitedu.nl;
+            root /var/www/html/public;
+            index index.php index.html;
+            
+            # Security headers
+            add_header X-Content-Type-Options nosniff;
+            add_header X-Frame-Options DENY;
+            add_header X-XSS-Protection \"1; mode=block\";
+            add_header Referrer-Policy \"strict-origin-when-cross-origin\";
+            
+            # PHP handling
+            location / {
+                try_files \$$uri \$$uri/ /index.php?\$$query_string;
+            }
+            
+            location ~ \.php\$$ {
+                fastcgi_pass php:9000;
+                fastcgi_index index.php;
+                include fastcgi_params;
+                fastcgi_param SCRIPT_FILENAME /var/www/html/public\$$fastcgi_script_name;
+                fastcgi_param PATH_INFO \$$fastcgi_path_info;
+                fastcgi_read_timeout 300;
+                fastcgi_buffer_size 128k;
+                fastcgi_buffers 4 256k;
+                fastcgi_busy_buffers_size 256k;
+            }
+            
+            # Security - deny access to hidden files
+            location ~ /\. {
+                deny all;
+            }
+            
+            # Static files
+            location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff|woff2|ttf|eot|svg)\$$ {
+                expires 1y;
+                add_header Cache-Control \"public, immutable\";
+            }
+            
+            # Let'\''s Encrypt
+            location /.well-known/acme-challenge/ {
+                root /var/www/certbot;
+            }
+        }' > /etc/nginx/conf.d/default.conf &&
+        nginx -g 'daemon off;'"
 
   # MySQL Database
   mysql:
