--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -15,8 +15,8 @@
       - prod_network
     depends_on:
       - mysql
-      - redis
-    restart: unless-stopped
+      - redis    restart: unless-stopped
+
   # Nginx Web Server
   nginx:
     image: nginx:alpine
@@ -27,6 +27,7 @@
     volumes:
       - ./public:/var/www/html/public:ro
       - ./storage/logs/nginx:/var/log/nginx
+      - ./docker/production/nginx/http.conf:/etc/nginx/conf.d/default.conf:ro
       - certbot_www:/var/www/certbot
       - certbot_conf:/etc/nginx/ssl:ro
     networks:
@@ -34,54 +35,6 @@
     depends_on:
       - php
     restart: unless-stopped
-    command: >
-      sh -c "
-        echo 'server {
-            listen 80;
-            server_name mapitedu.nl www.mapitedu.nl;
-            root /var/www/html/public;
-            index index.php index.html;
-            
-            # Security headers
-            add_header X-Content-Type-Options nosniff;
-            add_header X-Frame-Options DENY;
-            add_header X-XSS-Protection \"1; mode=block\";
-            add_header Referrer-Policy \"strict-origin-when-cross-origin\";
-            
-            # PHP handling
-            location / {
-                try_files \$$uri \$$uri/ /index.php?\$$query_string;
-            }
-            
-            location ~ \.php\$$ {
-                fastcgi_pass php:9000;
-                fastcgi_index index.php;
-                include fastcgi_params;
-                fastcgi_param SCRIPT_FILENAME /var/www/html/public\$$fastcgi_script_name;
-                fastcgi_param PATH_INFO \$$fastcgi_path_info;
-                fastcgi_read_timeout 300;
-                fastcgi_buffer_size 128k;
-                fastcgi_buffers 4 256k;
-                fastcgi_busy_buffers_size 256k;
-            }
-            
-            # Security - deny access to hidden files
-            location ~ /\. {
-                deny all;
-            }
-            
-            # Static files
-            location ~* \.(jpg|jpeg|png|gif|ico|css|js|woff|woff2|ttf|eot|svg)\$$ {
-                expires 1y;
-                add_header Cache-Control \"public, immutable\";
-            }
-            
-            # Let'\''s Encrypt
-            location /.well-known/acme-challenge/ {
-                root /var/www/certbot;
-            }
-        }' > /etc/nginx/conf.d/default.conf &&
-        nginx -g 'daemon off;'"
 
   # MySQL Database
   mysql:
