Fix: Correct YAML syntax in docker-compose.production.yml

--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -10,12 +10,12 @@
     volumes:
       - ./storage:/var/www/html/storage
       - ./storage/logs:/var/www/html/logs
-      - ./.env:/var/www/html/.env
-    networks:
+      - ./.env:/var/www/html/.env    networks:
       - prod_network
     depends_on:
       - mysql
-      - redis    restart: unless-stopped
+      - redis
+    restart: unless-stopped
 
   # Nginx Web Server
   nginx:
