--- a/docker/production/nginx/https.conf
+++ b/docker/production/nginx/https.conf
@@ -100,14 +100,8 @@ server {
         add_header Cache-Control "public, immutable";
         try_files $uri @php;
     }
-    
-    # API rate limiting
+      # API endpoints
     location /api/ {
-        limit_req zone=api burst=20 nodelay;
-        proxy_pass http://php:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
+        try_files $uri $uri/ /index.php?$query_string;
     }
 }
