--- a/docker/production/nginx/https.conf
+++ b/docker/production/nginx/https.conf
@@ -55,34 +55,25 @@ server {
     gzip_comp_level 6;
     gzip_min_length 1000;
     gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript;
-    
-    # Handle PHP files
+      # Handle PHP files
     location ~ \.php$ {
-        proxy_pass http://php:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_read_timeout 300;
-        proxy_connect_timeout 300;
-        proxy_send_timeout 300;
+        try_files $uri =404;
+        fastcgi_split_path_info ^(.+\.php)(/.+)$;
+        fastcgi_pass php:9000;
+        fastcgi_index index.php;
+        include fastcgi_params;
+        fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
+        fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param HTTPS on;
+        fastcgi_param HTTP_X_FORWARDED_PROTO https;
+        fastcgi_read_timeout 300;
+        fastcgi_connect_timeout 300;
+        fastcgi_send_timeout 300;
     }
     
     # Handle static files and directory requests
     location / {
-        try_files $uri $uri/ @php;
-    }
-    
-    # Fallback to PHP for all requests
-    location @php {
-        proxy_pass http://php:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_read_timeout 300;
-        proxy_connect_timeout 300;
-        proxy_send_timeout 300;
+        try_files $uri $uri/ /index.php?$query_string;
     }
     
     # Block access to sensitive files
@@ -93,14 +84,14 @@ server {
     location ~ \.(htaccess|htpasswd|ini|log|sh|sql|conf)$ {
         deny all;
     }
-    
-    # Cache static assets
+      # Cache static assets
     location ~* \.(jpg|jpeg|png|gif|ico|css|js|svg|woff|woff2|ttf|eot)$ {
         expires 1y;
         add_header Cache-Control "public, immutable";
-        try_files $uri @php;
+        try_files $uri =404;
     }
-      # API endpoints
+    
+    # API endpoints
     location /api/ {
         try_files $uri $uri/ /index.php?$query_string;
     }
